# py-pkgs-tutorial-template-validation

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: ci-cd.yml
src/py_pkgs_tutorial/: __init__.py
tests/: test_py_pkgs_tutorial.py
